k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend-service
spec:
  type: NodePort
  selector:
    app: angular-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32000
