k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  selector:
    app: springboot-app
  ports:
    - port: 8090
      targetPort: 8090
  type: NodePort
